add authors matt and buck to formated file

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,8 @@ that launched the RED-I Project.
 
 Patrick F. White (pfwhite9@gmail.com) Inventor
 Christopher P. Barnes (senrabc@gmail.com)
+Matthew J. McConnell (devmattm@gmail.com)
+Michael J. Buchholz (ufbuck72@gmail.com)
 
 
 Many thanks to David Nelson, Mike Freid, Joy Peter, Ken Berguist, and
