--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,3 +13,27 @@ Example
   - Changed LICENSE from MIT to Apache
 ### Fixed
   - Fixed the missing copyright details in LICENSE file
+
+## [1.0.0] 2017-04-26
+
+ * Summary:
+  This is the initial release of lineman, a tool to ensure JSON data is properly
+  formatted to go into REDCAP  
+ * add project TODO with examples, references and formating (Christopher Barnes)
+ * add CHANGELOG with format, references and examples (Christopher Barnes)
+ * change LICENSE form MIT to Apache and update copyright to point to AUTHORS file (Christopher Barnes)
+ * add authors matt and buck to formated file (Christopher Barnes)
+ * add authors formated file (Christopher Barnes)
+ * adjust logs to be more readable (Patrick White)
+ * docopt unit testing refactor (Patrick White)
+
+ * bugfix (Patrick White)
+ * fixes more subject events than there are events to map to (Patrick White)
+ * casting the response content as string (Patrick White)
+ * fixed report generation bugs (Patrick White)
+ * added initial report functionality (Patrick White)
+ * faster export records call (Patrick White)
+ * changes to make lineman a command line tool (Patrick White)
+ * add __init__.py (Patrick White)
+ * Files added (Patrick White)
+ * Initial commit (PFWhite)
